--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/Atiwat-R/thai-geolocate.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Atiwat Rachatawarn <atiwat.rachatawarn@gmail.com> (https://github.com/Atiwat-R)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Atiwat-R/thai-geolocate/issues"
